# IdeaScout

./: .env.example  .gitignore  README.md  pyproject.toml
config/: classifier.yaml  sources.yaml  user_preferences.yaml
data/: dashboard.html
ideascout/: __init__.py  __main__.py  classifier.py  cli.py  dashboard.py  db.py  digest.py  ingest.py  models.py  sources_loader.py
ideascout/adapters/: __init__.py  base.py  github_trending.py  hackernews.py  indiehackers_rss.py  pulsemcp.py  reddit.py  rss.py  ycombinator.py
scripts/: README.md  install_schedule.ps1  run_digest.bat  run_poll_classify.bat  uninstall_schedule.ps1
tests/: conftest.py  test_adapters.py  test_classifier.py  test_dashboard.py  test_db.py  test_digest.py
